--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,23 @@
 ﻿# CMakeList.txt : CMake project for CracklingPlusPlus
-
 cmake_minimum_required (VERSION 3.8)
 
 # Project name, version and description
 project ("CracklingPlusPlus" VERSION 1.0.0 DESCRIPTION "C++ version of Crackling")
 
-# Added Helperlib
-add_library( HelperLib STATIC ${CMAKE_SOURCE_DIR}/lib/Helpers.cpp )
-
 # Add source to this project's executable.
-add_executable (${CMAKE_PROJECT_NAME} "src/CracklingPlusPlus.cpp" "include/Helpers.h" "lib/Helpers.cpp")
+add_executable (${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/src/CracklingPlusPlus.cpp)
 
-# Include Helper.h
-include_directories(${CMAKE_PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
+# Add include directory 
+include_directories(${CMAKE_SOURCE_DIR}/include)
+
+# Add library subdirectory
+add_subdirectory (${CMAKE_SOURCE_DIR}/lib)
+
+# Link library subdirectory
+target_link_directories (${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/lib)
 
 # Link HelperLib
-target_link_libraries(${CMAKE_PROJECT_NAME} HelperLib )
+target_link_libraries (${PROJECT_NAME} PUBLIC helperLib)
 
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
