--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,6 @@
 ﻿# CMakeList.txt : CMake project for CracklingPlusPlus
 cmake_minimum_required (VERSION 3.8)
 
-# Add include directory 
-include_directories (${CMAKE_SOURCE_DIR}/include)
-
 # Enable testing
 enable_testing()
 
@@ -11,13 +8,7 @@ enable_testing()
 add_library(testMain OBJECT testMain.cpp)
 
 # Adding Helpers tests excutable
-add_executable(helpersTest Helpers.cpp $<TARGET_OBJECTS:testMain>)
-
-# Link library subdirectory
-target_link_directories (helpersTest PUBLIC ${CMAKE_SOURCE_DIR}/lib)
-
-# Link HelperLib
-target_link_libraries (helpersTest PUBLIC helperLib)
+add_executable(testHelpers Helpers.cpp $<TARGET_OBJECTS:testMain>)
 
 # Added Helpers test
-add_test(NAME helpersTest COMMAND helpersTest)
+add_test(NAME testHelpers COMMAND testHelpers)
