Added ConfigManager class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,13 @@
 ﻿# CMakeList.txt : CMake project for CracklingPlusPlus
 cmake_minimum_required (VERSION 3.8)
 
+set (CMAKE_CXX_STANDARD 17)
+
 # Project name, version and description
 project ("CracklingPlusPlus" VERSION 1.0.0 DESCRIPTION "C++ version of Crackling")
+
+# Copy file
+configure_file(${CMAKE_SOURCE_DIR}/src/test-test_config.ini ${CMAKE_BINARY_DIR} COPYONLY)
 
 # Add include directory 
 include_directories (${CMAKE_SOURCE_DIR}/include)
@@ -16,12 +21,11 @@ link_directories (${CMAKE_SOURCE_DIR}/lib)
 # Link HelperLib
 link_libraries (helperLib)
 
+# Link ConfigManager
+link_libraries (ConfigManager)
+
 # Add source to this project's executable.
 add_executable (${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/src/CracklingPlusPlus.cpp)
-
-if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET CracklingPlusPlus PROPERTY CXX_STANDARD 20)
-endif()
 
 # Add tests subdirectory
 add_subdirectory (${CMAKE_SOURCE_DIR}/tests)
