--- a/src/test_config.ini
+++ b/src/test_config.ini
@@ -68,7 +68,7 @@ batch-size = 5000000
 
 [output]
 ; A directory to write output, and temporary, files to. Ensure this dir exists.
-dir = .
+dir = C:\Users\n9725059\Documents\Crackling-fork\Crackling\data\chr19_10k\_output
 
 ; The default name for the final results file. 
 ; This is prefixed with the name specified in General.
