Initial CHOPCHOP module commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,9 @@ link_libraries (ConfigManager)
 # Link Logger Class
 link_libraries (Logger)
 
+# Link CHOPCHOP Class
+link_libraries (CHOPCHOP)
+
 # Add source to this project's executable.
 add_executable (${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/src/CracklingPlusPlus.cpp)
 
