--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -6,3 +6,6 @@ add_library( ConfigManager STATIC ${CMAKE_SOURCE_DIR}/lib/ConfigManager.cpp ${CM
 
 # Added Logger
 add_library( Logger STATIC ${CMAKE_SOURCE_DIR}/lib/Logger.cpp ${CMAKE_SOURCE_DIR}/include/Logger.hpp)
+
+# Added CHOPCHOP
+add_library( CHOPCHOP STATIC ${CMAKE_SOURCE_DIR}/lib/CHOPCHOP.cpp ${CMAKE_SOURCE_DIR}/include/CHOPCHOP.hpp)
