--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,19 +1,24 @@
-﻿# Added Helperlib
+﻿# Add Helperlib
 add_library(helperLib STATIC ${CMAKE_SOURCE_DIR}/lib/Helpers.cpp ${CMAKE_SOURCE_DIR}/include/Helpers.hpp)
-# Link Libraries 
+# Link Library
 link_libraries (helperLib)
 
-# Added ConfigManager
+# Add ConfigManager
 add_library(ConfigManager STATIC ${CMAKE_SOURCE_DIR}/lib/ConfigManager.cpp ${CMAKE_SOURCE_DIR}/include/ConfigManager.hpp)
-# Link Libraries 
+# Link Library
 link_libraries (ConfigManager)
 
-# Added Logger
+# Add Logger
 add_library(Logger STATIC ${CMAKE_SOURCE_DIR}/lib/Logger.cpp ${CMAKE_SOURCE_DIR}/include/Logger.hpp)
-# Link Libraries 
+# Link Library 
 link_libraries (Logger)
 
-# Added CHOPCHOP
+# Add CHOPCHOP
 add_library(CHOPCHOP STATIC ${CMAKE_SOURCE_DIR}/lib/CHOPCHOP.cpp ${CMAKE_SOURCE_DIR}/include/CHOPCHOP.hpp)
-# Link Libraries 
+# Link Library
 link_libraries (CHOPCHOP)
+
+# Add mm10db
+add_library(mm10db STATIC ${CMAKE_SOURCE_DIR}/lib/mm10db.cpp ${CMAKE_SOURCE_DIR}/include/mm10db.hpp)
+# Link Library
+link_libraries (mm10db)
