Revert "Refactored variable names"
This reverts commit 3a317c5101bf935953b3acaf7b08564765832d0e.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,24 +1,19 @@
-﻿# Add Helperlib
+﻿# Added Helperlib
 add_library(helperLib STATIC ${CMAKE_SOURCE_DIR}/lib/Helpers.cpp ${CMAKE_SOURCE_DIR}/include/Helpers.hpp)
-# Link Library
+# Link Libraries 
 link_libraries (helperLib)
 
-# Add ConfigManager
+# Added ConfigManager
 add_library(ConfigManager STATIC ${CMAKE_SOURCE_DIR}/lib/ConfigManager.cpp ${CMAKE_SOURCE_DIR}/include/ConfigManager.hpp)
-# Link Library
+# Link Libraries 
 link_libraries (ConfigManager)
 
-# Add Logger
+# Added Logger
 add_library(Logger STATIC ${CMAKE_SOURCE_DIR}/lib/Logger.cpp ${CMAKE_SOURCE_DIR}/include/Logger.hpp)
-# Link Library 
+# Link Libraries 
 link_libraries (Logger)
 
-# Add CHOPCHOP
+# Added CHOPCHOP
 add_library(CHOPCHOP STATIC ${CMAKE_SOURCE_DIR}/lib/CHOPCHOP.cpp ${CMAKE_SOURCE_DIR}/include/CHOPCHOP.hpp)
-# Link Library
+# Link Libraries 
 link_libraries (CHOPCHOP)
-
-# Add mm10db
-add_library(mm10db STATIC ${CMAKE_SOURCE_DIR}/lib/mm10db.cpp ${CMAKE_SOURCE_DIR}/include/mm10db.hpp)
-# Link Library
-link_libraries (mm10db)
