--- a/tests/data/test_config.ini
+++ b/tests/data/test_config.ini
@@ -87,7 +87,7 @@ enabled = True
 
 ; ISSL executable path
 ; Default: ./isslScoreOfftargets 
-binary = ..\..\..\bin\isslScoreOfftargets.exe
+binary = isslScoreOfftargets.exe
 
 ; Which scoring method to use?
 ; Options: mit, cfd, and, or, avg
