--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -38,7 +38,7 @@ add_library(bowtie2 STATIC ${CMAKE_SOURCE_DIR}/lib/bowtie2.cpp ${CMAKE_SOURCE_DI
 # Link Libraries 
 link_libraries (bowtie2)
 
-# Add offtargetScoring
-add_library(offtargetScoring STATIC ${CMAKE_SOURCE_DIR}/lib/offtargetScoring.cpp ${CMAKE_SOURCE_DIR}/include/offtargetScoring.hpp)
+# Add offTargetScoring
+add_library(offTargetScoring STATIC ${CMAKE_SOURCE_DIR}/lib/offTargetScoring.cpp ${CMAKE_SOURCE_DIR}/include/offTargetScoring.hpp)
 # Link Libraries 
-link_libraries (offtargetScoring)
+link_libraries (offTargetScoring)
