--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -30,9 +30,9 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
-    - name: Test DIR
+    - name: Test Alternative
       # Build your program with the given configuration
-      run: cd ${{github.workspace}}/build && pwd && ls -la 
+      run: cd ${{github.workspace}}/build/tests && pwd && ls -la && ctest -C ${{env.BUILD_TYPE}}
 
     - name: Test
       working-directory: ${{github.workspace}}/build/tests
