--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -35,6 +35,7 @@ jobs:
       run: cd ${{github.workspace}}/build/tests && pwd && ls -la && ctest -C ${{env.BUILD_TYPE}}
 
     - name: Test
+      shell: bash
       working-directory: ${{github.workspace}}/build/tests
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
