--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -30,14 +30,6 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
-    - name: Test Alternative
-      # Build your program with the given configuration
-      run: cd ${{github.workspace}}/build/tests && pwd && ls -la && ctest -C ${{env.BUILD_TYPE}}
-
     - name: Test
-      shell: bash
-      working-directory: ${{github.workspace}}/build/tests
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}}
-      
+      # Build your program with the given configuration
+      run: cd ${{github.workspace}}/build/tests && ctest -C ${{env.BUILD_TYPE}}
