--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@
 cmake_minimum_required (VERSION 3.8)
 
 set (CMAKE_CXX_STANDARD 20)
+set (CMAKE_CXX_FLAGS_RELEASE "-O2")
 
 # Project name, version and description
 project ("CracklingPlusPlus" VERSION 1.0.0 DESCRIPTION "C++ version of Crackling")
