--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 ﻿# CMakeList.txt : CMake project for CracklingPlusPlus
 cmake_minimum_required (VERSION 3.8)
 
-set (CMAKE_CXX_STANDARD 20)
 set (CMAKE_CXX_FLAGS_RELEASE "-O2")
 
 # Project name, version and description
@@ -9,6 +8,8 @@ project ("CracklingPlusPlus" VERSION 1.0.0 DESCRIPTION "C++ version of Crackling
 
 # Add source to this project's executable.
 add_executable (${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/src/CracklingPlusPlus.cpp)
+
+set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)
 
 # Add include directory 
 include_directories (${CMAKE_SOURCE_DIR}/include)
