--- a/tests/data/test_config.ini
+++ b/tests/data/test_config.ini
@@ -85,6 +85,10 @@ delimiter = ,
 ; Default: True
 enabled = True
 
+; ISSL executable path
+; Default: ./isslScoreOfftargets 
+binary = isslScoreOfftargets.exe
+
 ; Which scoring method to use?
 ; Options: mit, cfd, and, or, avg
 ; mit - Fail when MIT drops below score-threshold
