Rolling back to last working version
This reverts commit bcae2fda5f820f5528a219af38db75108d74c39b.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ add_subdirectory (${CMAKE_SOURCE_DIR}/lib)
 link_directories (${CMAKE_SOURCE_DIR}/lib)
 
 # Link Libraries 
-target_link_libraries (${PROJECT_NAME} helperLib ConfigManager Logger cas9InputProcessor CHOPCHOP mm10db sgrnascorer2 bowtie2 ISSLOffTargetScoring)
+target_link_libraries (${PROJECT_NAME} helperLib ConfigManager Logger cas9InputProcessor CHOPCHOP mm10db sgrnascorer2 bowtie2 offTargetScoring)
 
 # Add tests subdirectory
 add_subdirectory (${CMAKE_SOURCE_DIR}/tests)
