--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -32,4 +32,4 @@ jobs:
 
     - name: Test
       # Build your program with the given configuration
-      run: cd ${{github.workspace}}/build/tests && ctest -C ${{env.BUILD_TYPE}}
+      run: cd ${{github.workspace}}/build/tests && ctest --verbose -C ${{env.BUILD_TYPE}}
