--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ add_executable (${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/src/CracklingPlusPlus.cpp)
 # Add library subdirectory
 add_subdirectory (${CMAKE_SOURCE_DIR}/lib)
 
+find_package(Boost 1.79 REQUIRED COMPONENTS regex)
+
 # Link Libraries to main executable
 target_link_libraries (
 	${PROJECT_NAME} 
@@ -31,6 +33,8 @@ target_link_libraries (
 	PRIVATE sgrnascorer2 
 	PRIVATE bowtie2 
 	PRIVATE ISSLOffTargetScoring
+	PRIVATE Boost::boost
+	PRIVATE Boost::regex
 )
 
 # Added ISSLCreateIndex subdirectory
